@@ -16,6 +16,8 @@ interface:
   this parameter is set to TRUE if the exit solve call was triggered by a restart?
 - new method SCIPswapPointers()
 - new method SCIPsetVarNInferencesInitial() to initialize the inference values of a variable
+- new method SCIPexecRelpscostBranching() in branch_relpscots.{c,h}; this method allows of calling the reliability pseudo cost branching algorithm 
+  for given set of branching candidates from the outside
 
 features:
 - constraint handler can now register their upgrade functions for quadratic constraints to cons_quadratic (similar to LINCONSUPGD)
